--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  name: MyString
 
 two:
-  content: MyText
+  name: MyString
